--- a/docs/DB002.md
+++ b/docs/DB002.md
@@ -152,8 +152,7 @@ Please refer to section 7, Part Identification, for part numbering and other ord
 
 This book describes this particular model of GreenArray chip, including its array and I/O configuration, pin-out, ROM contents, packaging, and its electrical and physical characteristics. In the interest of avoiding needless and often confusing redundancy, it is designed to be used in combination with other documents describing standard architecture and other components of the chip.
 
-The general characteristics and programming details for the F18A computers and I/O used in this chip are described in a separate document; please refer to **F18A Technology Reference**. The boot protocols supported by this chip are detailed in **Boot Protocols for GreenArrays Chips.** The current editions of these, along with many other relevant documents and application notes as well as the current edition of this document, may be found on our website at <http://www.greenarraychips.com> . It is always advisable to ensure that you are using the latest documents before starting work.
-
+The general characteristics and programming details for the F18A computers and I/O used in this chip are described in a separate document; please refer to **F18A Technology Reference**. The boot protocols supported by this chip are detailed in **Boot Protocols for GGA-144.** 
 ## Status of Data Given
 
 The data given herein are PRELIMINARY. The preliminary data have been obtained by testing prototype chips and by taking measurements across the process variation range from a qualification wafer run. Measurements have been made under the conditions noted in each section. This revision of the Data Book is based only upon measurements and testing done at room temperature; a later revision will include information about performance, particularly speed and power consumption, at various temperatures and Vdd voltages and using improved instrumentation.
