--- a/docs/DB002.md
+++ b/docs/DB002.md
@@ -142,7 +142,7 @@ Contents
 
 # Description
 
-The GA144-1.2 is an array of 144 **F18A computers**, capable of a peak aggregate performance of 96 billion operations per second, conserving energy by varying its power level dynamically over a range of 14 microwatts to 650 milliwatts as the application demands. 22 of these computers are equipped with one or more I/O pins. The chip is designed for use in demanding applications yet its cost is low enough to consider using it as a coprocessor or even as a simple I/O expander, comparing favorably in cost and power consumption with an FPGA. It is also ideal for prototyping of applications for GreenArray chips of any size, as well as prototyping and initial production runs of new products until volume justifies a customized chip optimized for the application.
+The `GA144A12` is an array of 144 **F18A computers**, capable of a peak aggregate performance of 96 billion operations per second, conserving energy by varying its power level dynamically over a range of 14 microwatts to 650 milliwatts as the application demands. 22 of these computers are equipped with one or more I/O pins. The chip is designed for use in demanding applications yet its cost is low enough to consider using it as a coprocessor or even as a simple I/O expander, comparing favorably in cost and power consumption with an FPGA. It is also ideal for prototyping of applications for GreenArray chips of any size, as well as prototyping and initial production runs of new products until volume justifies a customized chip optimized for the application.
 
 ## Ordering Information
 
@@ -152,7 +152,7 @@ Please refer to section 7, Part Identification, for part numbering and other ord
 
 This book describes this particular model of GreenArray chip, including its array and I/O configuration, pin-out, ROM contents, packaging, and its electrical and physical characteristics. In the interest of avoiding needless and often confusing redundancy, it is designed to be used in combination with other documents describing standard architecture and other components of the chip.
 
-The general characteristics and programming details for the F18A computers and I/O used in this chip are described in a separate document; please refer to **F18A Technology Reference**. The boot protocols supported by this chip are detailed in **Boot Protocols for GA-144.** 
+The general characteristics and programming details for the F18A computers and I/O used in this chip are described in a separate document; please refer to **F18A Technology Reference**. The boot protocols supported by this chip are detailed in **Boot Protocols for `GA144A12`.** 
 ## Status of Data Given
 
 The data given herein are PRELIMINARY. The preliminary data have been obtained by testing prototype chips and by taking measurements across the process variation range from a qualification wafer run. Measurements have been made under the conditions noted in each section. This revision of the Data Book is based only upon measurements and testing done at room temperature; a later revision will include information about performance, particularly speed and power consumption, at various temperatures and Vdd voltages and using improved instrumentation.
@@ -163,11 +163,11 @@ Table entries shaded in grey indicate data for which measurements or estimates a
 
 ### Numbers
 
-Numbers are written in decimal unless otherwise indicated. Hexadecimal values are indicated by explicitly writing “hex” or by preceding the number with the lowercase letter “x”. In colorForth coding examples, hexadecimal values are italicized and darkened.
+Numbers are written in decimal unless otherwise indicated. Hexadecimal values are indicated by explicitly writing `hex` or by preceding the number with the lowercase letter `x`. In colorForth coding examples, hexadecimal values are italicized and darkened.
 
 ### Node coordinates
 
-Each GA-144 chip is a rectangular array of **nodes,** each of which is an F18 computer. By convention these arrays are visualized as seen from the top of the silicon die, which is normally the top of the chip package, oriented such that pin 1 is in the upper left corner. Within the array, each node is identified by a three or four digit number denoting its Cartesian coordinates within the array as *yxx* or *yyxx* with the lower left corner node always being designated as node 000. Thus, for a GA144 chip whose computers are configured in an array of 18 columns and 8 rows, the numbers of the nodes in the lower right, upper left, and upper right corners are 017, 700, and 717 respectively.
+Each GA144A12 chip is a rectangular array of **nodes,** each of which is an F18 computer. By convention these arrays are visualized as seen from the top of the silicon die, which is normally the top of the chip package, oriented such that pin 1 is in the upper left corner. Within the array, each node is identified by a three or four digit number denoting its Cartesian coordinates within the array as *yxx* or *yyxx* with the lower left corner node always being designated as node 000. Thus, for a GA144 chip whose computers are configured in an array of 18 columns and 8 rows, the numbers of the nodes in the lower right, upper left, and upper right corners are 017, 700, and 717 respectively.
 
 ### Register names
 
@@ -614,7 +614,7 @@ To calibrate a particular node of a particular chip, let it reach ambient temper
 
 Although execution time is basically a linear function of temperature, the amount of energy expended in executing a given instruction is not. The graph below shows data taken from node 705 of a single typical chip. The black trace shows execution time for micronext, normalized to 1.00 at this node's timing at 20°C (2.43 nS in this case.) The red trace shows power consumed during a continuous micronext loop on that same node, normalized to 1.00 at the same temperature (2.50 mW in this case.)
 
-The GA-144 architecture makes it possible to dramatically reduce the energy required to perform useful work. Commitment, craftsmanship and attention to detail at all levels are rewarded by the realization of these economies.
+The GA144A12 architecture makes it possible to dramatically reduce the energy required to perform useful work. Commitment, craftsmanship and attention to detail at all levels are rewarded by the realization of these economies.
 
 #### Leakage Increases with Temperature
 
