Remove dead links

--- a/docs/DB002.md
+++ b/docs/DB002.md
@@ -4,11 +4,11 @@ DB002 - GA144 Chip Databook
 
 Contents
 
-[1. Description](#_Toc297635049)
+[1. Description]()
 
 [1.1 Ordering Information](#ordering-information)
 
-[1.2 Related Documents](#_Toc297635051)
+[1.2 Related Documents]()
 
 [1.3 Status of Data Given](#status-of-data-given)
 
@@ -24,11 +24,11 @@ Contents
 
 [2. Chip Configuration](#chip-configuration)
 
-[2.1 Array Layout and Pin Designation](#)
+[2.1 Array Layout and Pin Designation]()
 
 [2.2 Pin Functions](#pin-functions)
 
-[2.3 Configuration of each node](#_Toc297635061)
+[2.3 Configuration of each node]()
 
 [2.4 Specially Configured Nodes](#specially-configured-nodes)
 
@@ -38,7 +38,7 @@ Contents
 
 [2.4.3 Bottom Parallel Bus Group](#bottom-parallel-bus-group)
 
-[3. ROM Software](#_Toc297635066)
+[3. ROM Software]()
 
 [3.1 Common ROM Definitions](#common-rom-definitions)
 
@@ -50,11 +50,11 @@ Contents
 
 [3.3.2 Synchronous Boot Rom](#synchronous-boot-rom)
 
-[3.3.3 Asynchronous Boot ROM](#_Toc297635072)
+[3.3.3 Asynchronous Boot ROM]()
 
-[3.3.4 SPI Boot ROM](#_Toc297635073)
+[3.3.4 SPI Boot ROM]()
 
-[3.4 Other Special ROMs](#_Toc297635074)
+[3.4 Other Special ROMs]()
 
 [3.4.1 1-wire ROM](#1-wire-rom)
 
@@ -88,7 +88,7 @@ Contents
 
 [5.4.4 Instruction and Data Mix](#instruction-and-data-mix)
 
-[5.5 I/O Circuits](#_Toc297635092)
+[5.5 I/O Circuits]()
 
 [5.5.1 GPIO Pins](#gpio-pins)
 
@@ -98,13 +98,13 @@ Contents
 
 [5.5.4 SPI Node 705](#spi-node-705)
 
-[5.5.5 Asynchronous Boot Node 708](#_Toc297635097)
+[5.5.5 Asynchronous Boot Node 708]()
 
 [5.5.6 Synchronous Boot Node 300](#synchronous-boot-node-300)
 
 [5.5.7 Parallel (bus) Nodes](#parallel-bus-nodes)
 
-[5.5.8 Analog Nodes](#_Toc297635100)
+[5.5.8 Analog Nodes]()
 
 [5.5.9 SERDES](#serdes)
 
@@ -120,7 +120,7 @@ Contents
 
 [6.2 Physical Data](#physical-data)
 
-[6.2.1 Peak Reflow Temperature](#_Toc297635108)
+[6.2.1 Peak Reflow Temperature]()
 
 [6.2.2 ESD Sensitivity](#esd-sensitivity)
 
@@ -132,7 +132,7 @@ Contents
 
 [6.2.6 Materials](#materials)
 
-[7. Part Identification](#_Toc297635114)
+[7. Part Identification]()
 
 [7.1 Part Numbers for Ordering](#part-numbers-for-ordering)
 
