--- a/docs/pages/DB002.md
+++ b/docs/pages/DB002.md
@@ -1,11 +1,9 @@
 ---
 layout: default
-title: DB002 - GA144 Chip Databook
+title: DB002 - GA144A12 Chip Databook
 ---
 
-**IMPORTANT NOTICE**
-
-DB002 - GA144 Chip Databook
+DataBook DB002
 
 Contents
 
