--- a/docs/pages/DB002.md
+++ b/docs/pages/DB002.md
@@ -1,11 +1,9 @@
 ---
 layout: default
-title: DB002 - GA144A12 Chip Databook
+title: DB002 - The GA144A12 Chip
 ---
 
-DataBook DB002
-
-Contents
+Table of Contents
 
 [1. Description]()
 
