Format page, clean links

--- a/docs/pages/DB002.md
+++ b/docs/pages/DB002.md
@@ -1,15 +1,15 @@
 ---
 layout: default
-title: DB002 - The GA144A12 Chip
+title: DataBook 002 - The GA144A12 ISLP
 ---
 
 Table of Contents
 
-[1. Description]()
+[1. Description](#description)
 
 [1.1 Ordering Information](#ordering-information)
 
-[1.2 Related Documents]()
+[1.2 Related Documents](#related-documents)
 
 [1.3 Status of Data Given](#status-of-data-given)
 
@@ -25,11 +25,11 @@ Table of Contents
 
 [2. Chip Configuration](#chip-configuration)
 
-[2.1 Array Layout and Pin Designation]()
+[2.1 Array Layout and Pin Designation](#array-layout-and-pin-designation)
 
 [2.2 Pin Functions](#pin-functions)
 
-[2.3 Configuration of each node]()
+[2.3 Configuration of each node](#configuration-of-each-node)
 
 [2.4 Specially Configured Nodes](#specially-configured-nodes)
 
@@ -39,7 +39,7 @@ Table of Contents
 
 [2.4.3 Bottom Parallel Bus Group](#bottom-parallel-bus-group)
 
-[3. ROM Software]()
+[3. ROM Software](#rom-software)
 
 [3.1 Common ROM Definitions](#common-rom-definitions)
 
@@ -51,11 +51,11 @@ Table of Contents
 
 [3.3.2 Synchronous Boot Rom](#synchronous-boot-rom)
 
-[3.3.3 Asynchronous Boot ROM]()
+[3.3.3 Asynchronous Boot ROM](#asynchronous-boot-rom)
 
-[3.3.4 SPI Boot ROM]()
+[3.3.4 SPI Boot ROM](#spi-boot-rom)
 
-[3.4 Other Special ROMs]()
+[3.4 Other Special ROMs](#other-special-roms)
 
 [3.4.1 1-wire ROM](#1-wire-rom)
 
@@ -89,7 +89,7 @@ Table of Contents
 
 [5.4.4 Instruction and Data Mix](#instruction-and-data-mix)
 
-[5.5 I/O Circuits]()
+[5.5 I/O Circuits](#io-circuits)
 
 [5.5.1 GPIO Pins](#gpio-pins)
 
@@ -99,13 +99,13 @@ Table of Contents
 
 [5.5.4 SPI Node 705](#spi-node-705)
 
-[5.5.5 Asynchronous Boot Node 708]()
+[5.5.5 Asynchronous Boot Node 708](#asynchronous-boot-node-708)
 
 [5.5.6 Synchronous Boot Node 300](#synchronous-boot-node-300)
 
 [5.5.7 Parallel (bus) Nodes](#parallel-bus-nodes)
 
-[5.5.8 Analog Nodes]()
+[5.5.8 Analog Nodes](#analog-nodes)
 
 [5.5.9 SERDES](#serdes)
 
@@ -121,7 +121,7 @@ Table of Contents
 
 [6.2 Physical Data](#physical-data)
 
-[6.2.1 Peak Reflow Temperature]()
+[6.2.1 Peak Reflow Temperature](#peak-reflow-temperature)
 
 [6.2.2 ESD Sensitivity](#esd-sensitivity)
 
@@ -133,17 +133,15 @@ Table of Contents
 
 [6.2.6 Materials](#materials)
 
-[7. Part Identification]()
+[7. Part Identification](#part-identification)
 
 [7.1 Part Numbers for Ordering](#part-numbers-for-ordering)
 
 [7.2 Part Labeling and Key](#part-labeling-and-key)
 
-[8. Data Book Revision History](#data-book-revision-history)
-
 # Description
 
-The `GA144A12` is an array of 144 **F18A computers**, capable of a peak aggregate performance of 96 billion operations per second, conserving energy by varying its power level dynamically over a range of 14 microwatts to 650 milliwatts as the application demands. 22 of these computers are equipped with one or more I/O pins. The chip is designed for use in demanding applications yet its cost is low enough to consider using it as a coprocessor or even as a simple I/O expander, comparing favorably in cost and power consumption with an FPGA. It is also ideal for prototyping of applications for GreenArray chips of any size, as well as prototyping and initial production runs of new products until volume justifies a customized chip optimized for the application.
+The `GA144A12` is an array of 144 **F18A computers**, capable of a peak aggregate performance of 96 billion operations per second, conserving energy by varying its power level dynamically over a range of 14 microwatts to 650 milliwatts as the application demands. 22 of these computers are equipped with one or more I/O pins. The chip is designed for use in demanding applications yet its cost is low enough to consider using it as a coprocessor or even as a simple I/O expander, comparing favorably in cost and power consumption with an FPGA. It is also ideal for prototyping applications for ISLP chips of any size, as well as prototyping and initial production runs of new products until volume justifies a customized chip optimized for the application.
 
 ## Ordering Information
 
@@ -151,14 +149,9 @@ Please refer to section 7, Part Identification, for part numbering and other ord
 
 ## Related Documents
 
-This book describes this particular model of GreenArray chip, including its array and I/O configuration, pin-out, ROM contents, packaging, and its electrical and physical characteristics. In the interest of avoiding needless and often confusing redundancy, it is designed to be used in combination with other documents describing standard architecture and other components of the chip.
+This page describes the model GA144A12 Isolated-Linear Processor (ISLP), including its array and I/O configuration, pin-out, ROM contents, packaging, and its electrical and physical characteristics. In the interest of avoiding needless and often confusing redundancy, it is designed to be used in combination with other documents describing standard architecture and other components of the chip.
 
-The general characteristics and programming details for the F18A computers and I/O used in this chip are described in a separate document; please refer to **F18A Technology Reference**. The boot protocols supported by this chip are detailed in **Boot Protocols for `GA144A12`.** 
-## Status of Data Given
-
-The data given herein are PRELIMINARY. The preliminary data have been obtained by testing prototype chips and by taking measurements across the process variation range from a qualification wafer run. Measurements have been made under the conditions noted in each section. This revision of the Data Book is based only upon measurements and testing done at room temperature; a later revision will include information about performance, particularly speed and power consumption, at various temperatures and Vdd voltages and using improved instrumentation.
-
-Table entries shaded in grey indicate data for which measurements or estimates are presently unavailable. Data shown highlighted in yellow reflect only preliminary measurements from prototype chips; data highlighted in orange are our present best estimates and may reflect estimates from our vendors.
+The general characteristics and programming details for the F18A computers and I/O used in the ISLP are described in a separate document; please refer to **F18A Technology Reference**. The boot protocols supported by this chip are detailed in **Boot Protocols for `GA144A12`.** 
 
 ## Documentation Conventions
 
@@ -184,7 +177,9 @@ Binary numbers are visualized as a horizontal row of bits, numbered consecutivel
 
 This section identifies the F18A computer and I/O components included in the chip, their arrangement and pin-out, and their ROM software and reset behavior along with any variations from the documented norms for F18A technology.
 
-## ![](G144A12-poster-top.png)
+## Array Layout and Pin Designation
+
+Information to be added soon.
 
 ![](G144A12-poster-top.png)
 
@@ -628,7 +623,11 @@ The pay-off from careful programming can be substantial, and it can be very help
 
 This loop reads io repeatedly until its high order bit is 1. On one chip this loop burns an average of 4.8 to 6.51 mW, depending on what's on the stack! If the stack has, on entry, three copies of a value very close to the rest state of io for that node, the least power is used. If these values are simply the inverse of io then the loop burns an additional milliamp. Attention to detail can pay off with 1.7 less milliwatt used, or one joule of battery charge saved every 10 minutes of loop operation.
 
-I/O CircuitsAlthough the F18A I/O pads share a common design, there are some variations. This section characterizes the common GPIO pin and then shows details that differ from the GPIO model for each specialized type.
+## I/O Circuits
+
+Information to be added soon.
+
+Although the F18A I/O pads share a common design, there are some variations. This section characterizes the common GPIO pin and then shows details that differ from the GPIO model for each specialized type.
 
 ### GPIO Pins
 
@@ -843,15 +842,5 @@ The leadframe is plated with 300-800 µinches of tin. The package body is a comp
 **SGA047058** is fab wafer lot number; **1** is sub-lot if any; 0**9** is wafer number. Sub-lot or wafer numbers may be omitted.
 
 **1106** is year and week numbers of assembly, and **CN** is the ISO abbreviation for the country in which the chip was assembled.
-
-# 
-
-# Data Book Revision History
-
-| **REVISION** | **DESCRIPTION**                                                                                                                                   |
-|--------------|---------------------------------------------------------------------------------------------------------------------------------------------------|
-| 110411       | Preliminary release based on room temperature characterization of a small qualification sample.                                                   |
-| 110509       | Corrected recommended decoupling cap value. Clarified operating temperature data. Added preliminary performance data versus temperature and VDD.  |
-| 110704       | Minor corrections. Added Typical Instruction Timings.                                                                                             |
 
 ![](media/77f940aa9a3ec09ebca0252f30ecae1b.png)![](media/dc87685116dfdfed655001520664a8f5.png)![](media/08b20bca84b4471a4584ea951ac7e134.png)
