--- a/docs/pages/DB002.md
+++ b/docs/pages/DB002.md
@@ -79,7 +79,7 @@ Table of Contents
 
 [5.3 Typical Instruction Timings](#typical-instruction-timings)
 
-[5.4 Variables Affecting Performance and Efficiency](#_Toc297635087)
+[5.4 Variables Affecting Performance and Efficiency](#variables-affecting-performance-and-efficiency)
 
 [5.4.1 Fabrication Process](#fabrication-process)
 
