--- a/docs/pages/DB002.md
+++ b/docs/pages/DB002.md
@@ -5,139 +5,73 @@ title: DataBook 002 - The GA144A12
 
 Table of Contents
 
-[1. Description](#description)
-
-[1.1 Ordering Information](#ordering-information)
-
-[1.2 Related Documents](#related-documents)
-
-[1.3 Status of Data Given](#status-of-data-given)
-
-[1.4 Documentation Conventions](#documentation-conventions)
-
-[1.4.1 Numbers](#numbers)
-
-[1.4.2 Node coordinates](#node-coordinates)
-
-[1.4.3 Register names](#register-names)
-
-[1.4.4 Bit numbering](#bit-numbering)
-
-[2. Chip Configuration](#chip-configuration)
-
-[2.1 Array Layout and Pin Designation](#array-layout-and-pin-designation)
-
-[2.2 Pin Functions](#pin-functions)
-
-[2.3 Configuration of each node](#configuration-of-each-node)
-
-[2.4 Specially Configured Nodes](#specially-configured-nodes)
-
-[2.4.1 Top Analog Group](#top-analog-group)
-
-[2.4.2 Right Side Analog Groups](#right-side-analog-groups)
-
-[2.4.3 Bottom Parallel Bus Group](#bottom-parallel-bus-group)
-
-[3. ROM Software](#rom-software)
-
-[3.1 Common ROM Definitions](#common-rom-definitions)
-
-[3.2 Analog ROM](#analog-rom)
-
-[3.3 Boot ROMs](#boot-roms)
-
-[3.3.1 SERDES Boot ROM](#serdes-boot-rom)
-
-[3.3.2 Synchronous Boot Rom](#synchronous-boot-rom)
-
-[3.3.3 Asynchronous Boot ROM](#asynchronous-boot-rom)
-
-[3.3.4 SPI Boot ROM](#spi-boot-rom)
-
-[3.4 Other Special ROMs](#other-special-roms)
-
-[3.4.1 1-wire ROM](#1-wire-rom)
-
-[3.4.2 SDRAM and eForth ROMs](#sdram-and-eforth-roms)
-
-[4. Operating Conditions](#operating-conditions)
-
-[4.1 Absolute Maximum Ratings(1)](#absolute-maximum-ratings1)
-
-[4.2 Thermal Packaging Characteristics](#thermal-packaging-characteristics)
-
-[4.3 Recommended Operating Conditions](#recommended-operating-conditions)
-
-[5. Electrical Characteristics](#electrical-characteristics)
-
-[5.1 General](#general)
-
-[5.1.1 Power Supply Decoupling](#power-supply-decoupling)
-
-[5.2 Computers](#computers)
-
-[5.3 Typical Instruction Timings](#typical-instruction-timings)
-
-[5.4 Variables Affecting Performance and Efficiency](#variables-affecting-performance-and-efficiency)
-
-[5.4.1 Fabrication Process](#fabrication-process)
-
-[5.4.2 Supply Voltage Effects](#supply-voltage-effects)
-
-[5.4.3 Temperature Effects](#temperature-effects)
-
-[5.4.4 Instruction and Data Mix](#instruction-and-data-mix)
-
-[5.5 I/O Circuits](#io-circuits)
-
-[5.5.1 GPIO Pins](#gpio-pins)
-
-[5.5.2 RESET- Pin](#reset--pin)
-
-[5.5.3 Reset conditions and considerations](#reset-conditions-and-considerations)
-
-[5.5.4 SPI Node 705](#spi-node-705)
-
-[5.5.5 Asynchronous Boot Node 708](#asynchronous-boot-node-708)
-
-[5.5.6 Synchronous Boot Node 300](#synchronous-boot-node-300)
-
-[5.5.7 Parallel (bus) Nodes](#parallel-bus-nodes)
-
-[5.5.8 Analog Nodes](#analog-nodes)
-
-[5.5.9 SERDES](#serdes)
-
-[5.6 Timing Diagrams](#timing-diagrams)
-
-[6. Mechanical Data](#mechanical-data)
-
-[6.1 Package Description](#package-description)
-
-[6.1.1 Migration Path](#migration-path)
-
-[6.1.2 PCB Layout and Assembly Considerations](#pcb-layout-and-assembly-considerations)
-
-[6.2 Physical Data](#physical-data)
-
-[6.2.1 Peak Reflow Temperature](#peak-reflow-temperature)
-
-[6.2.2 ESD Sensitivity](#esd-sensitivity)
-
-[6.2.3 Moisture](#moisture)
-
-[6.2.4 Pressure](#pressure)
-
-[6.2.5 Vibration](#vibration)
-
-[6.2.6 Materials](#materials)
-
-[7. Part Identification](#part-identification)
-
-[7.1 Part Numbers for Ordering](#part-numbers-for-ordering)
-
-[7.2 Part Labeling and Key](#part-labeling-and-key)
+- [1. Description](#description)
+  - [1.1 Ordering Information](#ordering-information)
+  - [1.2 Related Documents](#related-documents)
+  - [1.3 Status of Data Given](#status-of-data-given)
+  - [1.4 Documentation Conventions](#documentation-conventions)
+    - [1.4.1 Numbers](#numbers)
+    - [1.4.2 Node coordinates](#node-coordinates)
+    - [1.4.3 Register names](#register-names)
+    - [1.4.4 Bit numbering](#bit-numbering)
+- [2. Chip Configuration](#chip-configuration)
+  - [2.1 Array Layout and Pin Designation](#array-layout-and-pin-designation)
+  - [2.2 Pin Functions](#pin-functions)
+  - [2.3 Configuration of each node](#configuration-of-each-node)
+  - [2.4 Specially Configured Nodes](#specially-configured-nodes)
+    - [2.4.1 Top Analog Group](#top-analog-group)
+    - [2.4.2 Right Side Analog Groups](#right-side-analog-groups)
+    - [2.4.3 Bottom Parallel Bus Group](#bottom-parallel-bus-group)
+- [3. ROM Software](#rom-software)
+  - [3.1 Common ROM Definitions](#common-rom-definitions)
+  - [3.2 Analog ROM](#analog-rom)
+  - [3.3 Boot ROMs](#boot-roms)
+    - [3.3.1 SERDES Boot ROM](#serdes-boot-rom)
+    - [3.3.2 Synchronous Boot Rom](#synchronous-boot-rom)
+    - [3.3.3 Asynchronous Boot ROM](#asynchronous-boot-rom)
+    - [3.3.4 SPI Boot ROM](#spi-boot-rom)
+  - [3.4 Other Special ROMs](#other-special-roms)
+    - [3.4.1 1-wire ROM](#1-wire-rom)
+    - [3.4.2 SDRAM and eForth ROMs](#sdram-and-eforth-roms)
+- [4. Operating Conditions](#operating-conditions)
+  - [4.1 Absolute Maximum Ratings(1)](#absolute-maximum-ratings1)
+  - [4.2 Thermal Packaging Characteristics](#thermal-packaging-characteristics)
+  - [4.3 Recommended Operating Conditions](#recommended-operating-conditions)
+- [5. Electrical Characteristics](#electrical-characteristics)
+  - [5.1 General](#general)
+    - [5.1.1 Power Supply Decoupling](#power-supply-decoupling)
+  - [5.2 Computers](#computers)
+  - [5.3 Typical Instruction Timings](#typical-instruction-timings)
+  - [5.4 Variables Affecting Performance and Efficiency](#variables-affecting-performance-and-efficiency)
+    - [5.4.1 Fabrication Process](#fabrication-process)
+    - [5.4.2 Supply Voltage Effects](#supply-voltage-effects)
+    - [5.4.3 Temperature Effects](#temperature-effects)
+    - [5.4.4 Instruction and Data Mix](#instruction-and-data-mix)
+  - [5.5 I/O Circuits](#io-circuits)
+    - [5.5.1 GPIO Pins](#gpio-pins)
+    - [5.5.2 RESET- Pin](#reset--pin)
+    - [5.5.3 Reset conditions and considerations](#reset-conditions-and-considerations)
+    - [5.5.4 SPI Node 705](#spi-node-705)
+    - [5.5.5 Asynchronous Boot Node 708](#asynchronous-boot-node-708)
+    - [5.5.6 Synchronous Boot Node 300](#synchronous-boot-node-300)
+    - [5.5.7 Parallel (bus) Nodes](#parallel-bus-nodes)
+    - [5.5.8 Analog Nodes](#analog-nodes)
+    - [5.5.9 SERDES](#serdes)
+  - [5.6 Timing Diagrams](#timing-diagrams)
+- [6. Mechanical Data](#mechanical-data)
+  - [6.1 Package Description](#package-description)
+    - [6.1.1 Migration Path](#migration-path)
+    - [6.1.2 PCB Layout and Assembly Considerations](#pcb-layout-and-assembly-considerations)
+  - [6.2 Physical Data](#physical-data)
+    - [6.2.1 Peak Reflow Temperature](#peak-reflow-temperature)
+    - [6.2.2 ESD Sensitivity](#esd-sensitivity)
+    - [6.2.3 Moisture](#moisture)
+    - [6.2.4 Pressure](#pressure)
+    - [6.2.5 Vibration](#vibration)
+    - [6.2.6 Materials](#materials)
+- [7. Part Identification](#part-identification)
+  - [7.1 Part Numbers for Ordering](#part-numbers-for-ordering)
+  - [7.2 Part Labeling and Key](#part-labeling-and-key)
 
 # Description
 
